# simQML

./: .gitignore  Bridge.cpp  Bridge.h  CMakeLists.txt  CustomUI-PORTING-GUIDE.md  Geometry.cpp  Geometry.h  README.md  SIM.cpp  SIM.h  UI.cpp  UI.h  callbacks.xml  config.h.in  license.txt  plugin.cpp  simQML.lua
lua/: simQML.lua
qml/CoppeliaSimPlugin/: Import.qml  PluginWindow.qml
sourceCode/: Bridge.cpp  Bridge.h  Geometry.cpp  Geometry.h  SIM.cpp  SIM.h  UI.cpp  UI.h  callbacks.xml  plugin.cpp
